--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -13,9 +13,11 @@
 
   <!-- include source files here... -->
   <script src="src/robot.js"></script>
+  <script src="src/grid.js"></script>
 
   <!-- include spec files here... -->
   <script src="spec/robotSpec.js"></script>
+  <script src="spec/gridSpec.js"></script>
 
 </head>
 
